// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`max number should not return an error (equal) 1`] = `undefined`;

exports[`max number should not return an error 1`] = `undefined`;

exports[`max number should return a custom message 1`] = `
Object {
  "error": Object {
    "error": "too big",
    "path": "value",
  },
}
`;

exports[`max number should return an error 1`] = `
Object {
  "error": Object {
    "error": "must be less than or equal to 2",
    "path": "value",
  },
}
`;

exports[`max string should not return an error (equal) 1`] = `undefined`;

exports[`max string should not return an error 1`] = `undefined`;

exports[`max string should return a custom message 1`] = `
Object {
  "error": Object {
    "error": "too long",
    "path": "value",
  },
}
`;

exports[`max string should return an error 1`] = `
Object {
  "error": Object {
    "error": "length must be less than or equal 2 characters long",
    "path": "value",
  },
}
`;
